# ctp-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  ctp.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  ctp.rockspec  (+3 more)
py/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.py  ctp_sdk.py  ctp_types.py  features.py  pyproject.toml
py/core/: context.py  control.py  helpers.py  operation.py  response.py  result.py  utility_type.py
py/entity/: json_api_entity.py  plugin_api_entity.py  plugin_entity.py
py/feature/: base_feature.py  clienttrack_feature.py  debug_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  rbac_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_json_api_direct.py  test_json_api_entity.py  test_netsim.py  test_pipeline.py  test_plugin_api_direct.py  test_plugin_api_entity.py  test_plugin_direct.py  test_plugin_entity.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_init.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_headers.py  prepare_params.py  prepare_query.py  register.py  result_basic.py  result_body.py
(+448 files in other folders)
